network_policy/netpol-allow-from-ns-default.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ns-default
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: demo-1
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: red          
      podSelector:
        matchLabels:
          demo: test
