network_policy/netpol-allow-from-ns-red.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ns-default
  namespace: default
spec:
  podSelector:
    matchLabels:
      run: demo-1
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: red          
      podSelector:
        matchLabels:
          demo: test
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-from-ns-red
  namespace: red
spec:
  podSelector:
    matchLabels:
      demo: test
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
      podSelector:
        matchLabels:
          run: demo-1
